v1/css/app.css
/* app css stylesheet */
body {
  padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
}

.buff {
  margin-left:0px;
}

.table {
  margin-bottom: 0px;
}

.checkbox input {
  opacity:.5;
}

.well { 
  padding:10px;
}

a.hidden_stat {
  color:#8E44AD;
}

a:hover.hidden_stat {
  color:#9B59B6;
}

span.together {
  display:inline;
}

ul.party_member  {
  margin-top:0px;  
  margin-bottom:0px;
  margin-right:0px;
  margin-left:0px;
}

.party_member img {
  vertical-align:middle;
}

.party_member li {
  display: inline;
  padding: 0;
}
.party_member li:first-child {
  padding-left: 0;
}

span.ability-level {
  position:absolute;
}

/* Wrapper for page content to push down footer */
#wrap {
  min-height: 100%;
  height: auto !important;
  height: 100%;
  /* Negative indent footer by it's height */
  margin: 0 auto -60px;
}

/* Set the fixed height of the footer here */
#push,
#footer {
  height: 60px;
}
#footer {
  background-color: #f5f5f5;
}

#footer {
  text-align: center;
  padding: 30px 0;
  margin-top: 70px;
  border-top: 1px solid #e5e5e5;
  background-color: #f5f5f5;
}
#footer p {
  margin-bottom: 0;
  color: #777;
}
.footer-links {
  margin: 10px 0;
}
.footer-links li {
  display: inline;
  padding: 0 2px;
}
.footer-links li:first-child {
  padding-left: 0;
}

/* Lastly, apply responsive CSS fixes as necessary */
/* Landscape phone to portrait tablet */
@media (max-width: 979px) {
  #footer {
    margin-left: -20px;
    margin-right: -20px;
    padding-left: 20px;
    padding-right: 20px;
  }

  tbody {
    overflow-x: auto
  }

  span.together {
  display:block;
  min-height: 50px;
  }

}

/* Landscape phones and down */
@media (max-width: 480px) {
  th.hidden_stat,td.hidden_stat {
    display:none;
  }
}

